--- a/templates/comment.html
+++ b/templates/comment.html
@@ -163,7 +163,7 @@
                 <form class="myform" action="/Commenting" method="post">
                     <h2>Leave a Comment</h2>
                     <textarea name="Content" placeholder="Enter your comment..." required></textarea>
-                    <input type="hidden" name="title" value="{{.Post.Title}}">
+                    <input type="hidden" name="post_id" value="{{.Post.ID}}">
                     <input class="input btn" type="submit" value="Submit Comment">
                 </form>
             </div>
@@ -175,8 +175,8 @@
                     <h3>{{.Uname}}</h3>
                     <p>{{.Content}}</p>
 
-                    <a href="/like-dislike?post_id={{.Id}}&action=like&type=comment"><i class="fas fa-thumbs-up"></i> {{.Likes}}</a>
-                    <a href="/like-dislike?post_id={{.Id}}&action=dislike&type=comment"><i class="fas fa-thumbs-down"></i> {{.Dislikes}}</a>
+                    <a href="/like-dislike?post_id={{.Postid}}&commentid={{.Id}}&action=like&type=comment"><i class="fas fa-thumbs-up"></i> {{.Likes}}</a>
+                    <a href="/like-dislike?post_id={{.Postid}}&commentid={{.Id}}&action=dislike&type=comment"><i class="fas fa-thumbs-down"></i> {{.Dislikes}}</a>
                 </div>
                 {{end}}
             </div>
