--- a/templates/home.html
+++ b/templates/home.html
@@ -71,8 +71,8 @@
                     {{end}}
                     <p class="content">{{.Content}}</p>
                     <div class="post-actions">
-                        <a href="/like-dislike?post_id={{.ID}}&action=like&type=post"><i class="fas fa-thumbs-up"></i> {{.Likes}}</a>
-                        <a href="/like-dislike?post_id={{.ID}}&action=dislike&type=post"><i class="fas fa-thumbs-down"></i> {{.Dislikes}}</a>
+                        <a href="/like-dislike?commentid={{.ID}}&action=like&type=post"><i class="fas fa-thumbs-up"></i> {{.Likes}}</a>
+                        <a href="/like-dislike?commentid={{.ID}}&action=dislike&type=post"><i class="fas fa-thumbs-down"></i> {{.Dislikes}}</a>
                         <a href="/Comment?post_id={{.ID}}"><i class="fas fa-comment"></i> Comments</a>
 
                     </div>
