--- a/static/home.css
+++ b/static/home.css
@@ -13,6 +13,11 @@ body {
 }
 
 
+.action-btn.liked-btn {
+    background-color: white; 
+    color: black;
+}
+
 .head {
     display: flex;
     justify-content: space-between;
@@ -102,8 +107,13 @@ body {
     align-items: center;
 }
 
-.profilInfo span {
+.profile-details {
+    display: flex;
+    flex-direction: column;
     font-family: "Roboto Slab", serif;
+}
+
+.profilInfo span:nth-child(1) {
     font-size: 20px;
 }
 
@@ -119,7 +129,6 @@ body {
 }
 
 
-/* Post Styles */
 .Posts {
     display: grid;
     gap: 8px;
@@ -134,7 +143,13 @@ body {
     overflow:auto;
 }
 
-
+.time {
+    font-size: 13px; 
+    color: #888; 
+    font-style: italic; 
+}
+  
+  
 
 
 .category {
@@ -150,12 +165,18 @@ body {
 
 .action-btn {
     text-decoration: none;
-    background-color: rgba(0, 0, 0, 0.3);
+    background-color: #0000004d;
     padding: 10px;
     border-radius: 30px;
     color: #ECECEC;
     transition: background-color 0.3s ease;
     margin: 5px;
+    cursor: pointer;
+    display: inline-flex;
+    width: 50px;
+    text-align: center;
+    border: none;
+    gap: 5px;
 }
 
 .rightBtns {
